2010-02-18  Peter Kasting  <pkasting@google.com>

        Not reviewed, Chromium build fix.

        r54963 had a typo in the WebCore.gypi change.
        https://bugs.webkit.org/show_bug.cgi?id=35003

        * WebCore.gypi:

2010-02-18  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Simon Fraser.

        Changing forward declaration of TimingFunction in GraphicsLayer.h from
        class to struct to match its actual definition in TimingFunction.h

        https://bugs.webkit.org/show_bug.cgi?id=35069


        * platform/graphics/GraphicsLayer.h:
           Change forward declaration from: class TimingFunction to:
           struct TimingFunction

2010-02-18  Noam Rosenthal  <noam.rosenthal@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Minor improvement to hybrid QPixmap
        https://bugs.webkit.org/show_bug.cgi?id=34507
        Instead of having toHTMLImageElement which creates a new element,
        assignToHTMLImageElement would set an existing HTML <img/> element to
        contain the native QPixmap/QImge.
        Also made some style fixes.

        Additions to existing tests: see WebKit/qt/tests

        * bridge/qt/qt_pixmapruntime.cpp:
        (JSC::Bindings::QtPixmapWidthField::valueFromInstance): style
        (JSC::Bindings::QtPixmapHeightField::valueFromInstance): style
        (JSC::Bindings::QtPixmapAssignToElementMethod::name): assignTo
        (JSC::Bindings::QtPixmapAssignToElementMethod::invoke): new function
        (JSC::Bindings::QtPixmapAssignToElementMethod::numParameters): 1
        (JSC::Bindings::QtPixmapToDataUrlMethod::invoke): style
        (JSC::Bindings::QtPixmapToStringMethod::invoke): style
        (JSC::Bindings::QtPixmapInstance::invokeMethod): style
        (JSC::Bindings::QtPixmapClass::methodsNamed): new func, removed old
        (JSC::Bindings::QtPixmapInstance::getPropertyNames): ditto
        (JSC::Bindings::QtPixmapInstance::defaultValue): style