@@ -1,3 +1,15 @@
+2010-02-18  Dumitru Daniliuc  <dumi@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        Allow creating/dropping virtual tables when the module is FTS2.
+
+        https://bugs.webkit.org/show_bug.cgi?id=34867
+
+        * storage/DatabaseAuthorizer.cpp:
+        (WebCore::DatabaseAuthorizer::createVTable):
+        (WebCore::DatabaseAuthorizer::dropVTable):
+
 2010-02-18  Peter Kasting  <pkasting@google.com>
 
         Not reviewed, Chromium build fix.
